--- a/client/views/index.hbs
+++ b/client/views/index.hbs
@@ -3,7 +3,7 @@
 <head>
 	<title>Remake v1.0.0</title>
 	<link rel="stylesheet" type="text/css" href="css/app.css">
-	<script src='js/app.js'></script>
+	<script src='./js/app.js'></script>
 </head>
 <body class='gamescreen'>
 	<div id='game' width="1200" height="960"></div>
