--- a/client/views/index.hbs
+++ b/client/views/index.hbs
@@ -3,18 +3,14 @@
 <head>
 	<title>Remake v1.0.0</title>
 	<link rel="stylesheet" type="text/css" href="css/app.css">
-	<script src='./js/app.js'></script>
+	<script src='js/app.js'></script>
 </head>
 <body class='gamescreen'>
 	<div id='game' width="1200" height="960"></div>
 	<script type="text/javascript">
 		const Remake = require('Remake')
 		var game = new Remake({ targetId: 'game' });
-		console.log("starting");
-		game.start(()=>{
-			console.log("started");
-		});
-
+		game.start();
 	</script>
 </body>
 
