Fix build double-compile issue

--- a/client/views/index.hbs
+++ b/client/views/index.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Remake v1.0.0</title>
+	<title>Niki's Birthday</title>
 	<link rel="stylesheet" type="text/css" href="css/app.css">
 	<script src='js/app.js'></script>
 </head>
